# Coinbase-Support-Agent

./: .env.example  .gitignore  README.md  prompt_refinement_part8_9_10.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: __init__.py
app/actions/: onboarding.py  recovery.py  ticket.py  transaction.py
app/agent/: graph.py  guardrails.py  qa.py  router.py  schemas.py
app/core/: config.py  logging.py
app/eval/: __main__.py  rag_eval.py  retrieval_eval.py  runner.py  test_cases.json
app/llm/: client.py  prompts.py
app/retrieval/: __init__.py  chunking.py  embeddings.py  index_faiss.py  retriever.py
app/storage/: sqlite_store.py
backend/: main.py
data/: app.db
data/corpus/: articles.jsonl  chunks.jsonl  manifest.csv  manifest.json  robots_check.json
data/eval/: eval_metrics.json  eval_results.csv  eval_summary.json  failure_analysis.md  rag_eval_results.csv  rag_metrics.json  retrieval_eval.csv
data/index/: faiss.index
data/mock/: transactions.json
deployment/: Dockerfile  README.md  docker-compose.yml
docs/: architecture.md  demo_script.md  demo_transcripts.md  design_decisions.md  presentation_notes.md  presentation_prompt.md  team_handoff.md
frontend/: streamlit_app.py
scraper/: __init__.py  discover.py  ingest.py  robots.py  seed_urls.txt  wayback.py
scripts/: build_kb.py
