[project]
name = "coinbase-support-agent"
version = "1.0.0"
description = "Production-style Coinbase Help Center conversational support agent (course project)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
